codelabs/lab11-coursera/3-gke/clust-eu1/apps/3-net_policy/manifests/2-client.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - image: client
        name: client
        command:
          - sleep
          - "3600"
