codelabs/lab11-coursera/3-gke/clust-eu1/apps/3-net_policy/manifests/3-web-allow-from-client.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-from-client
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: web
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: client
