codelabs/lab11-coursera/3-gke/clust-eu1/apps/3-net_policy/manifests/4-client-allow-to-web.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: bb-allow-to-web
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: client
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: web
  - to:
    ports:
    - protocol: UDP
      port: 53
